<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav"
    app:startDestination="@id/firstFragment">
    <fragment
        android:id="@+id/firstFragment"
        android:label="@string/primer_fragmento"
        android:name="com.example.reymortiz_fragmentos.ui.firstNav.FirstFragment"
        tools:layout="@layout/first_fragment">

        <action
            android:id="@+id/action_firstFragment_to_secondFragment"
            app:destination="@id/secondFragment" />
    </fragment>
    <fragment
        android:id="@+id/secondFragment"
        android:label="@string/segundo_fragmento"
        android:name="com.example.reymortiz_fragmentos.ui.firstNav.SecondFragment"
        tools:layout="@layout/second_fragment">

        <action
            android:id="@+id/action_secondFragment_to_thirdFragment"
            app:destination="@id/thirdFragment" />
        <action
            android:id="@+id/action_secondFragment_to_firstFragment"
            app:destination="@id/firstFragment" />
    </fragment>
    <fragment
        android:id="@+id/thirdFragment"
        android:label="@string/tercer_fragmento"
        android:name="com.example.reymortiz_fragmentos.ui.firstNav.ThirdFragment"
        tools:layout="@layout/third_fragment">
        <action
            android:id="@+id/action_thirdFragment_to_firstFragment"
            app:destination="@id/firstFragment" />
        <action
            android:id="@+id/action_thirdFragment_to_secondFragment"
            app:destination="@id/secondFragment" />
    </fragment>
    <fragment
        android:id="@+id/fourthFragment"
        android:label="@string/cuarto_fragmento"
        android:name="com.example.reymortiz_fragmentos.ui.secondNav.FourthFragment"
        tools:layout="@layout/fourth_fragment">

        <action
            android:id="@+id/action_fourthFragment_to_fifthFragment"
            app:destination="@id/fifthFragment" />
    </fragment>
    <fragment
        android:id="@+id/fifthFragment"
        android:label="@string/quinto_fragmento"
        android:name="com.example.reymortiz_fragmentos.ui.secondNav.FifthFragment"
        tools:layout="@layout/fifth_fragment">

        <action
            android:id="@+id/action_fifthFragment_to_sixthFragment"
            app:destination="@id/sixthFragment" />
        <action
            android:id="@+id/action_fifthFragment_to_fourthFragment"
            app:destination="@id/fourthFragment" />
    </fragment>
    <fragment
        android:id="@+id/sixthFragment"
        android:label="@string/sexto_fragmento"
        android:name="com.example.reymortiz_fragmentos.ui.secondNav.SixthFragment"
        tools:layout="@layout/sixth_fragment">
        <action
            android:id="@+id/action_sixthFragment_to_fourthFragment"
            app:destination="@id/fourthFragment" />
        <action
            android:id="@+id/action_sixthFragment_to_fifthFragment"
            app:destination="@id/fifthFragment" />
    </fragment>
    <fragment
        android:id="@+id/seventhFragment"
        android:label="@string/septimo_fragmento"
        android:name="com.example.reymortiz_fragmentos.ui.thirdNav.SeventhFragment"
        tools:layout="@layout/seventh_fragment">

        <action
            android:id="@+id/action_seventhFragment_to_eighthFragment"
            app:destination="@id/eighthFragment" />
    </fragment>
    <fragment
        android:id="@+id/eighthFragment"
        android:label="@string/octavo_fragmento"
        android:name="com.example.reymortiz_fragmentos.ui.thirdNav.EighthFragment"
        tools:layout="@layout/eighth_fragment">

        <action
            android:id="@+id/action_eighthFragment_to_ninthFragment"
            app:destination="@id/ninthFragment" />
        <action
            android:id="@+id/action_eighthFragment_to_seventhFragment"
            app:destination="@id/seventhFragment" />
    </fragment>
    <fragment
        android:id="@+id/ninthFragment"
        android:label="@string/noveno_fragmento"
        android:name="com.example.reymortiz_fragmentos.ui.thirdNav.NinthFragment"
        tools:layout="@layout/ninth_fragment">
        <action
            android:id="@+id/action_ninthFragment_to_seventhFragment"
            app:destination="@id/seventhFragment" />
        <action
            android:id="@+id/action_ninthFragment_to_eighthFragment"
            app:destination="@id/eighthFragment" />
    </fragment>
</navigation>